--- a/Functions/Visualization/Plots.ipynb
+++ b/Functions/Visualization/Plots.ipynb
@@ -40,59 +40,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "41947e15",
    "metadata": {},
    "outputs": [],
    "source": [
     "#-------------------------------------------------- PLOTS ---------------------------------------------------------------------#\n",
-    "def Plot_Of_Correlation(dataframe):\n",
+    "def Plot_Of_Matrix_Correlation(dataframe):\n",
     "    '''\n",
-    "    This function visualize plot of Target Correlation  (Target is the first column)\n",
+    "    This function visualizes the plot of Target Correlation (Target is the first column)\n",
     "    ------------------------------\n",
     "    Parameter(dataframe): DataFrame\n",
     "    ------------------------------\n",
     "    '''\n",
     "    \n",
     "    plt.style.use(\"cyberpunk\") #Background color\n",
+    "    fig, ax = plt.subplots(1, 2, figsize=(18, 9), tight_layout=True)\n",
     "\n",
-    "    plt.figure(figsize=(12, 7), tight_layout=True)\n",
-    "\n",
-    "    heatmap = sns.heatmap(dataframe.corr()[[dataframe.corr().columns[0]]].sort_values(by=dataframe.corr().columns[0], ascending=False),\n",
-    "                          vmin=-1, vmax=1, annot=True, fmt='.1g', square=False, cbar=False, cmap='coolwarm')\n",
-    "    heatmap.set_title('Correlation of Target', fontdict={'fontsize':15}, color='Gold', pad=12);\n",
-    "\n",
-    "    plt.tick_params(axis='x', labelsize=12, colors='White')\n",
-    "    plt.tick_params(axis='y', labelrotation=7, labelsize=12, colors='White')\n",
-    "\n",
-    "    plt.show()\n",
-    "#-------------------------------------------------- PLOTS ---------------------------------------------------------------------#\n",
-    "\n",
-    "\n",
-    "\n",
-    "#-------------------------------------------------- PLOTS ---------------------------------------------------------------------#\n",
-    "def Plot_Of_Matrix_Correlation(dataframe):\n",
-    "    '''\n",
-    "    This function visualize plot of Target Correlation  (Target is the first column)\n",
-    "    ------------------------------\n",
-    "    Parameter(dataframe): DataFrame\n",
-    "    ------------------------------\n",
-    "    '''\n",
-    "        \n",
+    "    # Full correlation heatmap\n",
     "    matrix = np.tril(dataframe.corr())\n",
+    "    heatmap1 = sns.heatmap(dataframe.corr(),\n",
+    "                           vmin=-1, vmax=1, annot=True, fmt='.1g', square=False, cbar=False,\n",
+    "                           mask=matrix, ax=ax[0], cmap='coolwarm')\n",
+    "    heatmap1.set_title('Correlation Heatmap', fontdict={'fontsize': 15}, color='Gold', pad=12)\n",
+    "    ax[0].tick_params(axis='x', labelsize=0)\n",
+    "    ax[0].tick_params(axis='y', labelrotation=7, labelsize=12, width=3, length=7, direction='in', colors='White')\n",
+    "    ax[0].grid(zorder=3, alpha=0.2, linestyle='--', linewidth=0.5, color='darkgrey')\n",
     "\n",
-    "    plt.figure(figsize=(16, 8), tight_layout=True)\n",
-    "\n",
-    "    heatmap = sns.heatmap(dataframe.corr(),\n",
-    "                          vmin=-1, vmax=1, annot=True,  fmt='.1g', square=False, cbar=False,\n",
-    "                          mask=matrix,\n",
-    "                          cmap='coolwarm')\n",
-    "    heatmap.set_title('Correlation of Target', fontdict={'fontsize':15}, color='Gold', pad=12)  \n",
-    "\n",
-    "    plt.tick_params(axis='x', labelsize=0)\n",
-    "    plt.tick_params(axis='y', labelrotation=7, labelsize=12, width=3, length=7,  direction='in', colors='White')\n",
-    "    plt.grid(zorder=3, alpha=0.2, linestyle='--', linewidth=0.5, color='darkgrey') #Grid of plot\n",
-    "\n",
+    "    # Correlation with target column heatmap\n",
+    "    target_corr = dataframe.corr()[[dataframe.columns[0]]].sort_values(by=dataframe.columns[0], ascending=False)\n",
+    "    heatmap2 = sns.heatmap(target_corr,\n",
+    "                           vmin=-1, vmax=1, annot=True, fmt='.1g', square=False, cbar=False, ax=ax[1], cmap='coolwarm')\n",
+    "    heatmap2.set_title('Correlation with Target', fontdict={'fontsize': 15}, color='Gold', pad=12)\n",
+    "    ax[1].tick_params(axis='x', labelsize=12, colors='White')\n",
+    "    ax[1].tick_params(axis='y', labelsize=0, colors='White')\n",
     "    plt.show()\n",
     "#-------------------------------------------------- PLOTS ---------------------------------------------------------------------#\n",
     "\n",
