--- a/Functions/Extract_Data/Binance_API/Extract_Binance_Data.ipynb
+++ b/Functions/Extract_Data/Binance_API/Extract_Binance_Data.ipynb
@@ -29,13 +29,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "757012ca",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Binance:\n",
-    "    def Get_All_Coins_Info():\n",
+    "    def Get_All_Coins_Info(self):\n",
     "        '''\n",
     "        This function RETURN list with Cryptocurrency Simbols of Binance\n",
     "        '''\n",
@@ -53,7 +53,7 @@
     "        #except:\n",
     "        #    print('No option!\\nError')\n",
     "    \n",
-    "    def Get_Historical_Data_1Day(list_of_data):\n",
+    "    def Get_Historical_Data_1Day(self, list_of_data):\n",
     "        '''\n",
     "        This function RETURN dataframe with data \n",
     "        From: 1 Jan, 2020\n",
@@ -63,7 +63,7 @@
     "        ------------------------------\n",
     "        '''\n",
     "        \n",
-    "        dataframe = pd.date_range(start='01/01/2020' , end='31/12/2023', freq=\"1D\").to_frame()\n",
+    "        dataframe = pd.date_range(start='2020-01-01' , end='2023-12-31', freq=\"1D\").to_frame()\n",
     "        dataframe.index.name = 'Open time'\n",
     "        dataframe.drop([0], axis=1, inplace=True)\n",
     "        \n",
@@ -73,15 +73,18 @@
     "        \n",
     "        for i in range(len(list_of_data)):\n",
     "            try:\n",
-    "                klines = pd.DataFrame(client.get_historical_klines(list_of_data[i], Client.KLINE_INTERVAL_1DAY, start_str=\"1 Jan, 2020\", end_str=\"31 Dec, 2023\"), columns=columns)\n",
-    "                klines['Open time'] = pd.to_datetime(klines['Open time'], unit='ms')\n",
+    "                klines = pd.DataFrame(client.get_historical_klines(list_of_data[i], Client.KLINE_INTERVAL_1DAY, start_str=\"2020-01-01\", end_str=\"2023-12-31\"), columns=columns)\n",
+    "                klines[\"Open time\"] = pd.to_datetime(klines[\"Open time\"], unit=\"ms\")\n",
+    "                klines.set_index(\"Open time\", inplace=True)\n",
+    "                klines = klines[[\"Open\", \"High\", \"Low\", \"Close\"]]\n",
+    "                #klines['Open time'] = pd.to_datetime(klines['Open time'], unit='ms')\n",
     "                #klines['Close time'] = pd.to_datetime(temp['Close time'], unit='ms')\n",
-    "                klines.index = pd.to_datetime(klines['Open time'], unit='ms')\n",
-    "                klines.drop(['Open time', 'Close time', 'Volume', 'Quote asset volume', 'Number of trades', 'TB Base Vol', 'TB Quot Vol', 'Ignore'], axis=1, inplace=True) #Delete columns\n",
+    "                #klines.index = pd.to_datetime(klines['Open time'], unit='ms')\n",
+    "                #klines.drop(['Open time', 'Close time', 'Volume', 'Quote asset volume', 'Number of trades', 'TB Base Vol', 'TB Quot Vol', 'Ignore'], axis=1, inplace=True) #Delete columns\n",
     "\n",
     "                for j in range(len(klines.columns)): #Rename the columns\n",
     "                    klines.rename(columns={klines.columns[j] : list_of_data[i]+'_'+klines.columns[j]}, inplace=True) \n",
-    "                dataframe = dataframe.join(klines)\n",
+    "                dataframe = dataframe.join(klines, how=\"left\")\n",
     "            except:\n",
     "                print('No option!\\nError')\n",
     "        \n",
