--- a/Functions/Extract_Data/Binance_API/Extract_Binance_Data.ipynb
+++ b/Functions/Extract_Data/Binance_API/Extract_Binance_Data.ipynb
@@ -35,23 +35,31 @@
    "outputs": [],
    "source": [
     "class Binance:\n",
-    "    def Get_All_Coins_Info(self):\n",
+    "    def Get_All_Coins_Info(self, countryCode): #Extract - Filter list Fiat of coin\n",
     "        '''\n",
     "        This function RETURN list with Cryptocurrency Simbols of Binance\n",
+    "        ------------------------------\n",
+    "        Parameter(countryCode): Fiat name (BUSD,EUR...)\n",
+    "        ------------------------------\n",
     "        '''\n",
-    "        \n",
-    "        list_all_symbol_of_crypto = []\n",
-    "        \n",
-    "        #try:\n",
-    "        print('--- Start Extract Data\\n.\\n.\\n.')\n",
-    "        info_all_symbol_of_crypto = client.get_all_tickers()\n",
-    "        info_all_symbol_of_crypto = pd.DataFrame(info_all_symbol_of_crypto) #DataFrame of information coins\n",
-    "    \n",
-    "        list_all_symbol_of_crypto = info_all_symbol_of_crypto.symbol.to_list()\n",
-    "        print('--- End Extract Data')    \n",
-    "        return list_all_symbol_of_crypto\n",
-    "        #except:\n",
-    "        #    print('No option!\\nError')\n",
+    "\n",
+    "        try:\n",
+    "            print('--- Start Extract Data\\n.\\n.\\n.')\n",
+    "\n",
+    "            info_coins = []\n",
+    "            exchange_info = client.get_exchange_info()\n",
+    "            info_df = pd.DataFrame(exchange_info['symbols']) #DataFrame of information coins\n",
+    "\n",
+    "            for _ in range(len(info_df)):\n",
+    "                #print(_,': ', info_df['quoteAsset'][_])\n",
+    "                if info_df['quoteAsset'][_] == countryCode:\n",
+    "                    #print(_, ': ', info_df['symbol'][_], ': ', info_df['quoteAsset'][_])\n",
+    "                    info_coins.append(info_df['symbol'][_])\n",
+    "            print('--- End Extract Data')    \n",
+    "            return info_coins\n",
+    "        except:\n",
+    "            print('No option!\\nError')\n",
+    "\n",
     "    \n",
     "    def Get_Historical_Data_1Day(self, list_of_data):\n",
     "        '''\n",
