--- a/Functions/OHLC/OHLC_S_F.ipynb
+++ b/Functions/OHLC/OHLC_S_F.ipynb
@@ -75,7 +75,7 @@
     "    ------------------------------\n",
     "    '''\n",
     "    \n",
-    "    data_number = 90\n",
+    "    data_number = 60\n",
     "    data_pred = 30\n",
     "    #------------#\n",
     "    new_dataframe = dataframe.copy()\n",
@@ -170,15 +170,15 @@
     "\n",
     "        for _ in range(len(list_index)):\n",
     "            if (list_open[_] - list_close[_]) > 0:\n",
-    "                ax1.bar(list_index[_], list_open[_] - list_close[_], width=1, linewidth=0.7, alpha=0.8, bottom=list_close[_], edgecolor=pal_black[0], color=pal_green[4])\n",
+    "                ax1.bar(list_index[_], list_open[_] - list_close[_], width=0.7, linewidth=1.5, alpha=0.8, bottom=list_close[_], edgecolor=pal_green[4], color='None')\n",
     "                ax1.axvline(x=list_index[_], alpha=0.1, linewidth=7, color=pal_green[5])\n",
-    "                plt.vlines(x=list_index[_], ymin=list_open[_], ymax=list_high[_], alpha=0.7, linestyles=\"dashed\", colors=\"Snow\")\n",
-    "                plt.vlines(x=list_index[_], ymin=list_close[_], ymax=list_low[_], alpha=0.7, linestyles=\"dashed\", colors=\"Snow\")\n",
+    "                plt.vlines(x=list_index[_], ymin=list_open[_], ymax=list_high[_], alpha=0.7, linestyles=\"dashed\", colors=pal_green[4])\n",
+    "                plt.vlines(x=list_index[_], ymin=list_close[_], ymax=list_low[_], alpha=0.7, linestyles=\"dashed\", colors=pal_green[4])\n",
     "            else:\n",
-    "                ax1.bar(list_index[_], list_close[_] - list_open[_], width=1, linewidth=0.7, alpha=0.8, bottom=list_open[_], edgecolor=pal_black[0], color=pal_red[2])\n",
+    "                ax1.bar(list_index[_], list_close[_] - list_open[_], width=0.7, linewidth=1.5, alpha=0.8, bottom=list_open[_], edgecolor=pal_red[2], color='None')\n",
     "                ax1.axvline(x=list_index[_], alpha=0.1, linewidth=7, color=pal_red[3])\n",
-    "                plt.vlines(x=list_index[_], ymin=list_close[_], ymax=list_high[_], alpha=0.7, linestyles=\"dashed\", colors=\"Snow\")\n",
-    "                plt.vlines(x=list_index[_], ymin=list_open[_], ymax=list_low[_], alpha=0.7, linestyles=\"dashed\", colors=\"Snow\")\n",
+    "                plt.vlines(x=list_index[_], ymin=list_close[_], ymax=list_high[_], alpha=0.7, linestyles=\"dashed\", colors=pal_red[2])\n",
+    "                plt.vlines(x=list_index[_], ymin=list_open[_], ymax=list_low[_], alpha=0.7, linestyles=\"dashed\", colors=pal_red[2])\n",
     "                    \n",
     "        # Update the last bar's color based on the checkbox state\n",
     "        if len(List_MA) == 2:\n",
@@ -231,16 +231,63 @@
     "        \n",
     "            lr = LinearRegression()\n",
     "            lr.fit(X_train,Y_train)\n",
+    "            predict_model_train = lr.predict(X_train).tolist()\n",
     "            predict_model = lr.predict(X_test).tolist()\n",
+    "\n",
+    "            Train_MSE = mean_squared_error(Y_train, predict_model_train)\n",
+    "            Train_RMSE = round(math.sqrt(Train_MSE),3)\n",
+    "            Test_MSE = mean_squared_error(Y_test, predict_model)\n",
+    "            Test_RMSE = round(math.sqrt(Test_MSE),3)\n",
     "            \n",
+    "            Residuals_Train = Y_train - predict_model_train\n",
+    "            Residuals_Test = Y_test - predict_model\n",
+    "            Residuals_data_test = pd.DataFrame(data={'Residuals_Train' : Residuals_Train, 'Residuals_Test' : Residuals_Test})\n",
+    "            residuals_index_test = pd.to_datetime(Residuals_data_test.index) #Residuals intex train\n",
+    "\n",
     "            for _ in range(len(predict_model)):\n",
     "                if (_ > 0) and (Y_test.iloc[_] > Y_test.iloc[_-1]) and (predict_model[_] >= Y_test.iloc[_]):\n",
-    "                    ax[0].scatter(index[_], predict_model[_], s=abs(Y_test.iloc[_] - predict_model[_]), linewidth=1.5, label='Positive Forecast', edgecolor=pal_green[3], color=pal_green[1])\n",
+    "                    ax1.scatter(index[_], predict_model[_], s=abs(Y_test.iloc[_] - predict_model[_]), linewidth=1.5, label='Positive Forecast', edgecolor=pal_green[3], color=pal_green[1])\n",
     "                elif (_ > 0) and (Y_test.iloc[_] < Y_test.iloc[_-1]) and (predict_model[_] <= Y_test.iloc[_]):\n",
-    "                    ax[0].scatter(index[_], predict_model[_], s=abs(Y_test.iloc[_] - predict_model[_]), linewidth=1.5, label='Negative Forecast', edgecolor=pal_red[3], color=pal_red[1])\n",
+    "                    ax1.scatter(index[_], predict_model[_], s=abs(Y_test.iloc[_] - predict_model[_]), linewidth=1.5, label='Negative Forecast', edgecolor=pal_red[3], color=pal_red[1])\n",
     "                else:\n",
-    "                    ax[0].scatter(index[_], predict_model[_], s=abs(Y_test.iloc[_] - predict_model[_]), linewidth=0.3, label='False Forecast', edgecolor=pal_black[5], color=pal_black[1])\n",
-    "            #ax1.legend(loc=\"upper right\", fontsize=15) #Label - Size of plot\n",
+    "                    ax1.scatter(index[_], predict_model[_], s=abs(Y_test.iloc[_] - predict_model[_]), linewidth=0.3, label='False Forecast', edgecolor=pal_black[5], color=pal_black[1])\n",
+    "            \n",
+    "            fig = gridspec.GridSpec(1, 2)\n",
+    "            pl.figure(figsize=(17, 4), tight_layout=True)\n",
+    "            \n",
+    "            ax3 = pl.subplot(fig[0, 0])\n",
+    "            bar1 = ax3.bar('Train RMSE', Train_RMSE, width=0.3, alpha=0.8, bottom=0, color=pal_blue[4])\n",
+    "            bar2 = ax3.bar('Test RMSE', Test_RMSE, width=0.3, alpha=0.8, bottom=0, color=pal_red[3])\n",
+    "            ax3.tick_params(axis='x', width=7, length=12, labelrotation=30, labelsize=15, bottom=True, direction=\"in\", colors='White') #White\n",
+    "            ax3.tick_params(axis='y', labelsize=0) #White\n",
+    "            ax3.tick_params(axis='x', width=7, length=12, labelrotation=30, labelsize=15, bottom=True, direction=\"in\", left=False, colors='White') #White\n",
+    "            ax3.grid(axis='y', zorder=1, alpha=0.2, linestyle='--', linewidth=0.5, color='darkgrey') #Grid of plot\n",
+    "            ax3.text(x='Train RMSE', y=Train_RMSE/2, s=Train_RMSE, color='White', weight='extra bold', ha='center', fontsize=15) #Text of labels\n",
+    "            ax3.text(x='Test RMSE', y=Test_RMSE/2, s=Test_RMSE, color='White', weight='extra bold', ha='center', fontsize=15) #Text of labels\n",
+    "            mplcp.add_bar_gradient(bars=bar1)\n",
+    "            mplcp.add_bar_gradient(bars=bar2)\n",
+    "            ax3.spines['top'].set_visible(False)\n",
+    "            ax3.spines['right'].set_visible(False)\n",
+    "            ax3.spines['left'].set_visible(False)\n",
+    "            ax3.spines['bottom'].set_color('White')\n",
+    "            ax3.spines['bottom'].set_linewidth(0.3)\n",
+    "        \n",
+    "            ax4 = pl.subplot(fig[0, 1])\n",
+    "            #ax4.plot(residuals_index_test, Residuals_data_test.Residuals_Train.values, 'o', color=pal_blue[4])\n",
+    "            #ax4.plot(residuals_index_test, Residuals_data_test.Residuals_Test.values, 'o', color=pal_red[3])\n",
+    "            ax4.plot(residuals_index_test, Residuals_data_test.Residuals_Train.values, ls='--', label='Residuals Train', color=pal_blue[4])\n",
+    "            ax4.plot(residuals_index_test, Residuals_data_test.Residuals_Test.values, ls='--', label='Residuals Test', color=pal_red[3])\n",
+    "            ax4.legend()\n",
+    "            #ax4.legend(['Residuals Train - Test'], loc=\"upper right\", fontsize=15) #Label - Size of plot\n",
+    "            ax4.tick_params(axis='x', labelrotation=30, labelsize=15, width=10, length=3, direction=\"in\", colors='White') #Rotation label x and y\n",
+    "            ax4.tick_params(axis='y', labelrotation=30, labelsize=15, colors='White') #Rotation label x and y\n",
+    "            ax4.grid(zorder=1, alpha=0.2, linestyle='--', linewidth=0.5, color='darkgrey') #Grid of plot\n",
+    "            mplcp.make_lines_glow()\n",
+    "            ax4.spines['top'].set_visible(False)\n",
+    "            ax4.spines['right'].set_visible(False)\n",
+    "            ax4.spines['bottom'].set_visible(False)\n",
+    "            ax4.spines['left'].set_color('White')\n",
+    "            ax4.spines['left'].set_linewidth(0.3)\n",
     "        \n",
     "        ax1.spines['top'].set_visible(False)\n",
     "        ax1.spines['right'].set_visible(False)\n",
