--- a/Functions/Save_CSV/Save_CSV.ipynb
+++ b/Functions/Save_CSV/Save_CSV.ipynb
@@ -40,11 +40,11 @@
     "    This function save a dataframe as csv file\n",
     "    ------------------------------\n",
     "    Parameter(dataframe): Name of dataframe\n",
-    "    Parameter(name_of_csv): Name of csv file\n",
+    "    Parameter(name_of_csv): Name of csv file (String)\n",
     "    ------------------------------\n",
     "    '''\n",
     "    \n",
-    "    dataframe.to_csv('../Forecast_Prices/Data\\Binance_Data_Crypto/'+name_of_csv+'.csv') "
+    "    dataframe.to_csv('../Forecast_Prices/Data/Binance_Data_Crypto/'+name_of_csv+'.csv') "
    ]
   },
   {
