--- a/Functions/Extract_Data/Binance_API/Extract_Binance_Data.ipynb
+++ b/Functions/Extract_Data/Binance_API/Extract_Binance_Data.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "757012ca",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
     "        '''\n",
     "\n",
     "        try:\n",
-    "            print('--- Start Extract Data\\n.\\n.\\n.')\n",
+    "            print('--- Start Get All Coins From Binance\\n.\\n.\\n.')\n",
     "\n",
     "            info_coins = []\n",
     "            exchange_info = client.get_exchange_info()\n",
@@ -55,12 +55,13 @@
     "                if info_df['quoteAsset'][_] == countryCode:\n",
     "                    #print(_, ': ', info_df['symbol'][_], ': ', info_df['quoteAsset'][_])\n",
     "                    info_coins.append(info_df['symbol'][_])\n",
-    "            print('--- End Extract Data')    \n",
+    "            print('--- End Get_All_Coins_Info From Binance')    \n",
     "            return info_coins\n",
     "        except:\n",
     "            print('No option!\\nError')\n",
     "\n",
-    "    \n",
+    "\n",
+    "            \n",
     "    def Get_Historical_Data_1Day(self, list_of_data):\n",
     "        '''\n",
     "        This function RETURN dataframe with data \n",
@@ -77,7 +78,7 @@
     "        \n",
     "        columns = ['Open time', 'Open', 'High', 'Low', 'Close', 'Volume', 'Close time', 'Quote asset volume', 'Number of trades', 'TB Base Vol', 'TB Quot Vol', 'Ignore']\n",
     "        \n",
-    "        print('--- Start Extract Data\\n.\\n.\\n.')\n",
+    "        print('--- Start Extract Data From Binance\\n.\\n.\\n.')\n",
     "        \n",
     "        for i in range(len(list_of_data)):\n",
     "            try:\n",
@@ -96,7 +97,50 @@
     "            except:\n",
     "                print('No option!\\nError')\n",
     "        \n",
-    "        print('--- End Extract Data')\n",
+    "        print('--- End Extract Data From Binance')\n",
+    "        return dataframe\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    def re_Get_Historical_Data_1Day(self, old_dataframe, list_of_data):\n",
+    "        '''\n",
+    "        This function RETURNS a DataFrame with data \n",
+    "        From: Last index of old_dataframe\n",
+    "        Until: Date now\n",
+    "        ------------------------------\n",
+    "        Parameter(old_dataframe): DataFrame\n",
+    "        Parameter(list_of_data): List of Coins\n",
+    "        ------------------------------\n",
+    "        '''\n",
+    "    \n",
+    "        old_dataframe_index = old_dataframe.index[-1].strftime('%Y-%m-%d')\n",
+    "        today_date = datetime.datetime.now().strftime(\"%Y-%m-%d\")\n",
+    "\n",
+    "        dataframe = pd.date_range(start=old_dataframe_index, end=today_date, freq=\"1D\").to_frame()\n",
+    "        dataframe.index.name = 'Open time'\n",
+    "        dataframe.drop([0], axis=1, inplace=True)\n",
+    "        \n",
+    "        columns = ['Open time', 'Open', 'High', 'Low', 'Close', 'Volume', 'Close time', 'Quote asset volume', 'Number of trades', 'TB Base Vol', 'TB Quot Vol', 'Ignore']\n",
+    "        \n",
+    "        print('--- Start Re-Extract Data From Binance\\n.\\n.\\n.')\n",
+    "        \n",
+    "        try:\n",
+    "            for i in range(len(list_of_data)):\n",
+    "                klines = pd.DataFrame(client.get_historical_klines(list_of_data[i], Client.KLINE_INTERVAL_1DAY, start_str=old_dataframe_index, end_str=today_date), columns=columns)\n",
+    "                klines[\"Open time\"] = pd.to_datetime(klines[\"Open time\"], unit=\"ms\")\n",
+    "                klines.set_index(\"Open time\", inplace=True)\n",
+    "                klines = klines[[\"Open\", \"High\", \"Low\", \"Close\"]]\n",
+    "            \n",
+    "                for j in range(len(klines.columns)): #Rename the columns\n",
+    "                    klines.rename(columns={klines.columns[j] : list_of_data[i]+'_'+klines.columns[j]}, inplace=True) \n",
+    "                dataframe = dataframe.join(klines, how=\"left\")\n",
+    "            dataframe.drop(index=dataframe.index[0].strftime('%Y-%m-%d'), axis=0, inplace=True)\n",
+    "            dataframe = pd.concat([old_dataframe,dataframe], axis=0)\n",
+    "            \n",
+    "        except:\n",
+    "            print('No option!\\nError')\n",
+    "        \n",
+    "        print('--- End Re-Extract Data From Binance')\n",
     "        return dataframe"
    ]
   },
