--- a/Functions/OHLC/OHLC_S_F.ipynb
+++ b/Functions/OHLC/OHLC_S_F.ipynb
@@ -55,12 +55,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "c877301b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the OHLC function\n",
     "def OHLC_S_F(dataframe, col_open, col_high, col_low, col_close):\n",
     "    '''\n",
     "    This Function visualizes a plot of dataframe OPEN - HIGH - LOW - Close values.\n",
@@ -256,16 +255,14 @@
     "            pl.figure(figsize=(17, 4), tight_layout=True)\n",
     "            \n",
     "            ax3 = pl.subplot(fig[0, 0])\n",
-    "            bar1 = ax3.bar('Train RMSE', Train_RMSE, width=0.3, alpha=0.8, bottom=0, color=pal_blue[4])\n",
-    "            bar2 = ax3.bar('Test RMSE', Test_RMSE, width=0.3, alpha=0.8, bottom=0, color=pal_red[3])\n",
+    "            bar1 = ax3.bar('Train RMSE', Train_RMSE, width=1.3, linewidth=3.5, alpha=0.8, edgecolor=pal_green[4], color='None')\n",
+    "            bar2 = ax3.bar('Test RMSE', Test_RMSE, width=1.3, linewidth=3.5, alpha=0.8, edgecolor=pal_red[2], color='None')\n",
     "            ax3.tick_params(axis='x', width=7, length=12, labelrotation=30, labelsize=15, bottom=True, direction=\"in\", colors='White') #White\n",
     "            ax3.tick_params(axis='y', labelsize=0) #White\n",
     "            ax3.tick_params(axis='x', width=7, length=12, labelrotation=30, labelsize=15, bottom=True, direction=\"in\", left=False, colors='White') #White\n",
     "            ax3.grid(axis='y', zorder=1, alpha=0.2, linestyle='--', linewidth=0.5, color='darkgrey') #Grid of plot\n",
     "            ax3.text(x='Train RMSE', y=Train_RMSE/2, s=Train_RMSE, color='White', weight='extra bold', ha='center', fontsize=15) #Text of labels\n",
     "            ax3.text(x='Test RMSE', y=Test_RMSE/2, s=Test_RMSE, color='White', weight='extra bold', ha='center', fontsize=15) #Text of labels\n",
-    "            mplcp.add_bar_gradient(bars=bar1)\n",
-    "            mplcp.add_bar_gradient(bars=bar2)\n",
     "            ax3.spines['top'].set_visible(False)\n",
     "            ax3.spines['right'].set_visible(False)\n",
     "            ax3.spines['left'].set_visible(False)\n",
@@ -275,8 +272,8 @@
     "            ax4 = pl.subplot(fig[0, 1])\n",
     "            #ax4.plot(residuals_index_test, Residuals_data_test.Residuals_Train.values, 'o', color=pal_blue[4])\n",
     "            #ax4.plot(residuals_index_test, Residuals_data_test.Residuals_Test.values, 'o', color=pal_red[3])\n",
-    "            ax4.plot(residuals_index_test, Residuals_data_test.Residuals_Train.values, ls='--', label='Residuals Train', color=pal_blue[4])\n",
-    "            ax4.plot(residuals_index_test, Residuals_data_test.Residuals_Test.values, ls='--', label='Residuals Test', color=pal_red[3])\n",
+    "            ax4.plot(residuals_index_test, Residuals_data_test.Residuals_Train.values, alpha=0.8, ls='--', label='Residuals Train', color=pal_green[4])\n",
+    "            ax4.plot(residuals_index_test, Residuals_data_test.Residuals_Test.values, alpha=0.8, ls='--', label='Residuals Test', color=pal_red[2])\n",
     "            ax4.legend()\n",
     "            #ax4.legend(['Residuals Train - Test'], loc=\"upper right\", fontsize=15) #Label - Size of plot\n",
     "            ax4.tick_params(axis='x', labelrotation=30, labelsize=15, width=10, length=3, direction=\"in\", colors='White') #Rotation label x and y\n",
